[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blastradius"
version = "0.1.0"
description = "A tool to analyze dependency blast radius"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kabilesh", email = "rktk.047@gmail.com"}
]
dependencies = [
    "networkx>=3.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
blastradius = "blastradius.output.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    '^benchmarks/',
    '^scratch_',
]
